--- a/Rapport/kontekst/IncrementTwo.tex
+++ b/Rapport/kontekst/IncrementTwo.tex
@@ -38,12 +38,19 @@
 When the Kinect have found the coordinates for the collision point of the thrown object, these coordinates should be sent to the robot, for it ot be able to move to the collision point and catch the object. 
 The data should be sent, as earlier mentioned in section \ref{sec: Arduino Wifi Shield}, by the Arduino wifi shiled. The Arduino and the computer running the Kinect program, should be connected to their own network, with the computer sending the data to the wifi shields IP-address.
 
+\subsection{Robot positioning}
+\label{sec:Robot positioning System Design}
+In the previous chapter, it was decided to use the motor's encoders to calculate the heading of the robot and the distance it has moved. The encoders will keep track of the number of degrees the specific motor have turned, which can be calculated to a distance using the wheels circumference.
+The coordinate set for the collision point of the object and the robots current position, will be used to calculate the heading, which the robot should have to reach the collision point. 
+
+(Hvordan vi oversætter Kinect X/Y til robot X/Y)
+
 \section{Implementation}
 \label{sec:i2Implementation}
 
 \subsection{Wifi Shield}
 \label{sec:Wifi Shield Implementation}
-To implement the Wifi Shield as part of the Arduino, the router connecting the Wifi Shield with a computer had to be port forwarded. The private network hosted by the D-link router had a specific ssid and password, which had to be explicitly assigned in the Arduino code for the Wifi Shield. The setup in the Arduino code was used to start the connection between the computer and the Wifi Shield, as well as printing the log of the connection \ref{ws}.
+To implement the Wifi Shield as part of the Arduino, the router connecting the Wifi Shield with a computer had to be port forwarded. The private network hosted by the D-link router had a specific ssid and password, which had to be explicitly assigned in the Arduino code for the Wifi Shield. The setup in the Arduino code was used to start the connection between the computer and the Wifi Shield, as well as printing the log of the connection. The setup for the wifi shield can be found in listing \ref{ws}.
 
 \begin{lstlisting}[caption={Connecting the Wifi shield to the network}, label={ws}]
 void setup() {
@@ -94,7 +101,8 @@ readString = "";
 }
 \end{lstlisting}
 
-(\textcolor{red}{The code describing how it receives data is needed here!})
+\subsection{Robot positioning}
+\label{sec:Robot positioning Implementation}
 
 \section{Evaluation}
 \label{sec:i2Evaluation}
