--- a/Rapport/kontekst/IncrementTwo.tex
+++ b/Rapport/kontekst/IncrementTwo.tex
@@ -1,8 +1,10 @@
 \chapter{Increment two}
 \label{chap:Increment two}
+This chapter is just like the chapter above. The results from increment one will be discussed and implemented and this should result in the same, new or changed requirements as well.  
 
 \section{Requirements}
 \label{sec:i2Requirements}
+The requirement marked with blue will be considered throughout this chapter.
 
 \begin{itemize}
 	\item The trash bin should catch the trash if the user throws it towards the trash bin and within a predefined area
@@ -31,7 +33,8 @@
 \end{itemize}
 
 \section{System design}
-\label{sec:i2System design}
+ \label{sec:i2System design} 
+In this section, the way the marked requirement are supposed to be fulfilled will be described and explained.  
 
 \subsection{Wifi Shield}
 \label{sec:Wifi Shield SD}
@@ -47,6 +50,7 @@ The coordinate set for the collision point of the object and the robots current 
 
 \section{Implementation}
 \label{sec:i2Implementation}
+This section explains how the marked requirements were actually implemented in the project and whether or not the requirements have been changed, removed or been fulfilled. 
 
 \subsection{Wifi Shield}
 \label{sec:Wifi Shield Implementation}
@@ -106,3 +110,4 @@ readString = "";
 
 \section{Evaluation}
 \label{sec:i2Evaluation}
+This section will include a short summary of the chapter and end up with an updated requirement list, showing changes from the first requirement list in the chapter. 
