--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -162,7 +162,7 @@ The requirements after finalizing increment one is:
 \end{itemize}
 \item The robot should know where it is positioned
 \begin{itemize}
-	\item \textcolor{red}{The robot should have a starting position, from where it should be able to calculate it's current position through calculations of the motory encoders}
+	\item \textcolor{red}{The robot should have a starting position, from where it should be able to calculate it's current position through calculations of the motor encoders}
 	\item \textcolor{green}{The robot's starting point should be placed outside its predefined area, such that it moves forward into the area}
 \end{itemize}
 \item The robot should be able to detect and track the thrown trash
