--- a/Rapport/kontekst/IncrementTwo.tex
+++ b/Rapport/kontekst/IncrementTwo.tex
@@ -13,7 +13,7 @@ The requirement marked with blue will be considered throughout this chapter.
 	\end{itemize}
 	\item The robot should know where it is positioned
 	\begin{itemize}
-		\item \textcolor{blue}{The robot should have a starting position, from where it should be able to calculate it's current position through calculations of the motory encoders}
+		\item \textcolor{blue}{The robot should have a starting position, from where it should be able to calculate it's current position through calculations of the motor encoders}
 		\item {The robot's starting point should be placed outside its predefined area, such that it moves forward into the area}
 	\end{itemize}
 	\item The robot should be able to detect and track the thrown trash
