--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -36,8 +36,11 @@
 %% Kontekst %%
 %\include{kontekst/Theory}
 \include{kontekst/Hardware}
+\include{kontekst/DesignSpecification}
+\include{kontekst/Systemdesign}
 \include{kontekst/IncrementOne}
 \include{kontekst/IncrementTwo}
+\include{kontekst/implementation}
 \include{kontekst/tests}
 
 %% Teknisk %%
