--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -1,7 +1,11 @@
-\chapter{System requirements}
-\label{chap:System requirements}
-The requirements for the project have been assembled thourgh out several chapters. First in the Analysis chatper, \ref{chap:Analysis}, the general requirements were set. Then in the Hardware chapter \ref{chap:Hardware}, the hardware would set some limitations for the project which lead to some more detailed requirements in the form of subrequirements.
-Through out the work with the robot problems occured and the requirements therefore changed. The changes done to the requirements though out the project, can be seen in Appendix (Referer til appendix A her) og (Referer til appendix B her).
+\chapter{Design specification}
+\label{chap:Design specification}
+This chapter will present the requirements and the way they were conducted for the project, the requirements will be examined at the end of the report to see if they have been fulfilled. The last section in the chapter will describe the delimitations made for the project.
+
+\section{System requirements}
+\label{sec:System requirements}
+The requirements for the project have been assembled through out several chapters. First in the Analysis chapter, \ref{chap:Analysis}, the general requirements were set. Then in the Hardware chapter \ref{chap:Hardware}, the hardware would set some limitations for the project which lead to some more detailed requirements in the form of subrequirements.
+Through out the work with the robot problems occurred and the requirements therefore changed. The changes done to the requirements though out the project, can be seen in Appendix (Referer til appendix A her) og (Referer til appendix B her).
 
 The requirements for the project have been conducted thorugh out the whole process and changes were made accordingly, to adapt to the hardware's limations and the problems found. The requirements can be seen in the following paragraphs. 
 
@@ -30,3 +34,8 @@ The requirements for the project have been conducted thorugh out the whole proce
 	\end{itemize}
 	\item {The robot should be able to receive data from a computer, through a wireless network}
 \end{itemize}
+
+\section{Delimitations}
+\label{sec:Delimitations}
+The group have made two delimitations for the project. First the group have decided that multiple object thrown should not be considered, so only one object should be thrown at a time. 
+It have also been decided that the robot should not drive backwards. The robot starts outside its predefined area and will only drive forward into that. This means that if the robot is already heading towards a point in its predefined area and the Kinect sends a new point, which is behind the robot, it will not be able to drive to the new point given by the Kinect. 
