--- a/Rapport/formalia/forord.tex
+++ b/Rapport/formalia/forord.tex
@@ -46,8 +46,8 @@ Throughout the report requirements are split into four colours with four differe
 \chapter*{Process model}
 The process model is a meld of elements from both plan driven and agile development. The process is plan driven in so far as to include a clear goal of what the initial requirements of the system are. The process model is very agile in that, although there is a clear outline as to what the requirements are, these are incrementally approached, with a simple starting point becoming increasingly covering of the project vision through the subsequent increments.
 
-The increments will be split up into four sections. Initially some of the already known requirements will be considered from previous increments and for the first increment from the analysis and hardware section, and these requirements will be the topic of the increment.
-After the initial requirement consideration, an design phase follows which details the design and problem considerations preceding the implementation. The design phase is then followed by an implementation phase which will explain the implementation process. The final phase is an evaluation of the increment and will concern whether the requirements were fulfilled, or an requirement needs to be altered, or if an requirement will be continued in the following increment. The evaluated requirements from a increment will then become the starting point of the next increment. 
+The increments will be split up into four sections. Initially some of the already known requirements will be considered from previous increments and for the first increment from the analysis and hardware chapters, and these requirements will be the topic of the increment.
+After the initial requirement consideration, a design phase follows which details the design and problem considerations preceding the implementation. The design phase is then followed by an implementation phase which will explain the implementation process. The final phase is an evaluation of the increment and will concern whether the requirements were fulfilled, or an requirement needs to be altered, or if an requirement will be continued in the following increment. The evaluated requirements from a increment will then become the starting point of the next increment. 
 
 The process includes emphasis on a small group of individuals with tasks usually undertaken by two group members or more, which is to promote cooperation and attempt to avoid having a single individual involved in a task beyond their capabilities and to get a second opinion. This is also to ensure that information is quickly communicated and exchanged by group members. The process uses pair programming because it promotes better programming and is usually very motivating in socially engaging issues with cooperation of project members.
 
