--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -1,2 +1,18 @@
 \chapter{System design}
 \label{chap:System design}
+%Hello mark, you suck. balls. 
+
+%Hvad dette chapter skal indeholde:
+%Hvordan positionen på robotten bliver udregnet og evt hvordan den skal kunne bevæge sig?????(referer og citer hvad vi har skrevet i incerement two)
+%Hvordan vi skal have Kinect og Arduino til at snakke sammen(Program i kinect der sender data til wifishield som arduinoet kan bruge)
+%Skal vi have noget med afgrænsningen til at vi bouncer med her????
+%Hvordan vores schedule skal fungere? Teorien bag det også kan det blive forklaret i implementationen.
+
+\section{Robot positioning and movement}
+\label{sec:Robot positioning and movement}
+
+\section{Connecting Arduino and Kinect}
+\label{sec:Connecting Arduino and Kinect}
+
+\section{Scheduling}
+\label{sec:Scheduling}
