--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -4,7 +4,7 @@ This chapter will present the requirements and the way they were conducted for t
 
 \section{System requirements}
 \label{sec:System requirements}
-The requirements for the project have been assembled through out several chapters. First in the Analysis chapter, \ref{chap:Analysis}, the general requirements were set. Then in the Hardware chapter \ref{chap:Hardware}, the hardware would set some limitations for the project which lead to some more detailed requirements in the form of subrequirements.
+The requirements for the project have been assembled through out several chapters. First in the Analysis chapter \ref{chap:Analysis}, the general requirements were set. Then in the Hardware chapter \ref{chap:Hardware}, the hardware would set some limitations for the project which lead to some more detailed requirements in the form of subrequirements.
 Through out the work with the robot problems occurred and the requirements therefore changed. The changes done to the requirements though out the project, can be seen in Appendix (Referer til appendix A her) og (Referer til appendix B her).
 
 The requirements for the project have been conducted thorugh out the whole process and changes were made accordingly, to adapt to the hardware's limations and the problems found. The requirements can be seen in the following paragraphs. 
@@ -37,5 +37,5 @@ The requirements for the project have been conducted thorugh out the whole proce
 
 \section{Delimitations}
 \label{sec:Delimitations}
-The group have made two delimitations for the project. First the group have decided that multiple object thrown should not be considered, so only one object should be thrown at a time. 
+The group have made two delimitations for the project. First the group have decided that multiple object thrown should not be considered, so only one object should be thrown at a time. \newline
 It have also been decided that the robot should not drive backwards. The robot starts outside its predefined area and will only drive forward into that. This means that if the robot is already heading towards a point in its predefined area and the Kinect sends a new point, which is behind the robot, it will not be able to drive to the new point given by the Kinect. 
