--- a/Rapport/Rapport.tex
+++ b/Rapport/Rapport.tex
@@ -40,6 +40,7 @@
 \include{kontekst/Systemdesign}
 \include{kontekst/IncrementOne}
 \include{kontekst/IncrementTwo}
+\include{kontekst/IncrementThree}
 \include{kontekst/implementation}
 \include{kontekst/tests}
 
