--- a/Rapport/kontekst/IncrementOne.tex
+++ b/Rapport/kontekst/IncrementOne.tex
@@ -28,6 +28,7 @@ The requirements considered in this increment are marked with blue colouring.
 	\item The robot should be able to move the trash bin, such that the thrown object lands inside the bin
 	\begin{itemize}
 		\item \textcolor{blue}{The robot should be able to turn and drive forward and backwards}
+		\item {The robot should be able to recognize the coordinates sent from the Kinect}
 	\end{itemize}
 	\item {The robot should be able to receive data from a computer, through a wireless network}
 \end{itemize}
@@ -177,6 +178,7 @@ The requirements after finalizing increment one is:
 \item The robot should be able to move the trash bin, such that the thrown trash lands inside the bin
 \begin{itemize}
 	\item \textcolor{orange}{The robot should be able to turn and drive forward}
+	\item {The robot should be able to recognize the coordinates sent from the Kinect}
 \end{itemize}
 \item {The robot should be able to receive data from a computer, through a wireless network}
 \end{itemize}
