--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -7,6 +7,7 @@
 %Hvordan vi skal have Kinect og Arduino til at snakke sammen(Program i kinect der sender data til wifishield som arduinoet kan bruge)
 %Skal vi have noget med afgrænsningen til at vi bouncer med her????
 %Hvordan vores schedule skal fungere? Teorien bag det også kan det blive forklaret i implementationen.
+%I system design skal vi også snakke om memory management evt ?? 
 
 \section{Robot positioning and movement}
 \label{sec:Robot positioning and movement}
