System design plan

--- a/Rapport/kontekst/Systemdesign.tex
+++ b/Rapport/kontekst/Systemdesign.tex
@@ -8,12 +8,28 @@
 %Skal vi have noget med afgrænsningen til at vi bouncer med her????
 %Hvordan vores schedule skal fungere? Teorien bag det også kan det blive forklaret i implementationen.
 %I system design skal vi også snakke om memory management evt ?? 
+%Skal vi skirve om den billede analyse som kinecten laver??
+
+\section{Software choices}
+\label{sec:Software choices}
+%Hviket software vi bruger til at udvikle robotten og hvilke libraries vi bruger? SKal vi evt. have en section om Hardware choices?
+
+\section{Robot design}
+\label{sec:Robot design}
+%Kkort om hvordan vi har lavet robotten? Vi kan evt. have noget med hvordan vi placere vores kinect i en subsection?
+
+\section{Arduino program design}
+\label{sec:Arduino program design}
+%Dette kan indeholde hvad vores program skal kunne gøre og evt. en punktform over hvilke funktioner/tasks som programmet løber i gennem.
 
 \section{Robot positioning and movement}
 \label{sec:Robot positioning and movement}
+%Kan indeholde hvordan vi har tænkt as med robottens kordinatsystem og hvordan den skal bevæge sig op i mod det punkt som den får fra kinecten.
 
 \section{Connecting Arduino and Kinect}
 \label{sec:Connecting Arduino and Kinect}
+%Kan indeholde hvordan vi har tænkt os at de skal kunne snakke sammen og hvilket data der skal blive sendt i mellem dem.
 
 \section{Scheduling}
 \label{sec:Scheduling}
+%Snakke om de forskellige tasks, deres deadlines og hvliken metode vi vil bruge til at schedule?
