Arduino program desgin

--- a/Rapport/kontekst/Hardware.tex
+++ b/Rapport/kontekst/Hardware.tex
@@ -63,29 +63,29 @@ Considering all the limitations and the capabilities of the hardware for the pro
 \begin{itemize}
 \item When a user throws an object towards the trash bin, within the predefined area, the bin should always catch the object
 \begin{itemize}
-\item \textcolor{red}{The robots predefined area should be calculated from the hardware limitations of the motors’ speed}
+\item \textcolor{blue}{The robots predefined area should be calculated from the hardware limitations of the motors’ speed}
 \end{itemize}
 \item The robot should know where it is positioned
 \begin{itemize}
-\item \textcolor{red}{The robot should have a starting position, from where it should be able to calculate it's current position }
-\item \textcolor{red}{The robot's starting point should be placed outside its predefined area, such that it moves forward into the area}
+\item \textcolor{blue}{The robot should have a starting position, from where it should be able to calculate it's current position }
+\item \textcolor{blue}{The robot's starting point should be placed outside its predefined area, such that it moves forward into the area}
 \end{itemize}
 \item The robot should be able to detect and track the thrown object
 \begin{itemize}
-\item \textcolor{red}{The thrown object should be detected and tracked by a Microsoft Kinect}
-\item \textcolor{red}{The Kinect should send the coordinates of the impact point of the object to the robot}
+\item \textcolor{blue}{The thrown object should be detected and tracked by a Microsoft Kinect}
+\item \textcolor{blue}{The Kinect should send the coordinates of the impact point of the object to the robot}
 \end{itemize}
 \item The robot should be able to calculate the impact point for the object
 \begin{itemize}
-\item \textcolor{red}{Trajectory prediction should be used to calculate the impact point of the thrown object}
+\item \textcolor{blue}{Trajectory prediction should be used to calculate the impact point of the thrown object}
 %\item \textcolor{red}{The trajectory prediction should include a bounce prediction}
 %\item \textcolor{red}{The bounce-shot should be thrown from a designated side of the camera}
 %\item \textcolor{red}{The bounce-shot should bounce into the predefined area where the robot should catch the trash within }
 \end{itemize}
 \item The robot should be able to move the trash bin, such that the thrown object lands inside the bin
 \begin{itemize}
-\item \textcolor{red}{The robot should be able to turn and drive forward and backwards}
-\item \textcolor{red}{The robot should be able to recognize the coordinates sent from the Kinect}
+\item \textcolor{blue}{The robot should be able to turn and drive forward and backwards}
+\item \textcolor{blue}{The robot should be able to recognize the coordinates sent from the Kinect}
 \end{itemize}
-\item \textcolor{red}{The robot should be able to receive data from a computer, through a wireless network}
+\item \textcolor{blue}{The robot should be able to receive data from a computer, through a wireless network}
 \end{itemize}
